--- a/app/src/main/res/layout/activity_juego.xml
+++ b/app/src/main/res/layout/activity_juego.xml
@@ -28,49 +28,58 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="31dp">
 
-    <Button
-        android:layout_height="100dp"
-        android:id="@+id/btn1"
-        android:layout_width="100dp" />
+        <Button
+            android:layout_height="100dp"
+            android:id="@+id/btn1"
+            android:layout_width="100dp"
+            android:onClick="onBtnPulsado"/>
 
         <Button
             android:layout_height="100dp"
             android:id="@+id/btn2"
-            android:layout_width="100dp" />
+            android:layout_width="100dp"
+            android:onClick="onBtnPulsado"/>
 
         <Button
             android:layout_height="100dp"
             android:id="@+id/btn3"
-            android:layout_width="100dp" />
+            android:layout_width="100dp"
+            android:onClick="onBtnPulsado"/>
 
         <Button
             android:layout_height="100dp"
             android:id="@+id/btn4"
-            android:layout_width="100dp" />
+            android:layout_width="100dp"
+            android:onClick="onBtnPulsado"/>
 
         <Button
             android:layout_height="100dp"
             android:id="@+id/btn5"
-            android:layout_width="100dp" />
+            android:layout_width="100dp"
+            android:onClick="onBtnPulsado"/>
 
         <Button
             android:layout_height="100dp"
             android:id="@+id/btn6"
-            android:layout_width="100dp" />
+            android:layout_width="100dp"
+            android:onClick="onBtnPulsado"/>
 
         <Button
             android:layout_height="100dp"
             android:id="@+id/btn7"
-            android:layout_width="100dp" />
+            android:layout_width="100dp"
+            android:onClick="onBtnPulsado"/>
 
         <Button
             android:layout_height="100dp"
             android:id="@+id/btn8"
-            android:layout_width="100dp" />
+            android:layout_width="100dp"
+            android:onClick="onBtnPulsado"/>
         <Button
             android:layout_height="100dp"
             android:id="@+id/btn9"
-            android:layout_width="100dp" />
+            android:layout_width="100dp"
+            android:onClick="onBtnPulsado"/>
 
 
     </GridLayout>
