--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,9 @@
         android:layout_marginStart="25dp"
         android:layout_below="@+id/txtJugador1"
         android:layout_alignParentStart="true"
-        tools:ignore="LabelFor" />
+        tools:ignore="LabelFor"
+        android:maxLines="1"
+        android:maxLength="17" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -39,7 +41,9 @@
         android:id="@+id/eTxtJugador2"
         android:layout_below="@+id/txtJugador2"
         android:layout_alignStart="@+id/txtJugador2"
-        tools:ignore="LabelFor" />
+        tools:ignore="LabelFor"
+        android:maxLength="17"
+        android:maxLines="1" />
 
     <RadioGroup
         android:layout_width="wrap_content"
@@ -56,7 +60,8 @@
             android:layout_marginTop="24dp"
             android:id="@+id/rbNaranjaJugador2"
             tools:ignore="ObsoleteLayoutParam"
-            android:onClick="on_radiobutton_pulsado"/>
+            android:onClick="on_radiobutton_pulsado"
+            android:enabled="false" />
 
         <RadioButton
             android:text="@string/rbVerde"
@@ -67,7 +72,8 @@
             android:layout_marginTop="14dp"
             android:id="@+id/rbVerdeJugador2"
             tools:ignore="ObsoleteLayoutParam"
-            android:onClick="on_radiobutton_pulsado"/>
+            android:onClick="on_radiobutton_pulsado"
+            android:checked="true" />
 
         <RadioButton
             android:text="@string/rbAzul"
@@ -87,7 +93,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/btnJugar"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="on_btnJugar_pulsado"/>
 
 
     <RadioGroup
@@ -104,7 +111,8 @@
             android:layout_below="@+id/eTxtJugador1"
             android:id="@+id/rbNaranjaJugador1"
             tools:ignore="ObsoleteLayoutParam"
-            android:onClick="on_radiobutton_pulsado"/>
+            android:onClick="on_radiobutton_pulsado"
+            android:checked="true" />
 
 
         <RadioButton
@@ -116,7 +124,8 @@
             android:layout_marginTop="17dp"
             android:id="@+id/rbVerdeJugador1"
             tools:ignore="ObsoleteLayoutParam"
-            android:onClick="on_radiobutton_pulsado"/>
+            android:onClick="on_radiobutton_pulsado"
+            android:enabled="false" />
 
         <RadioButton
             android:text="@string/rbAzul"
